# signdetector

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  desc.cpp  main.cpp  maskRed.cpp  meanShift.cpp  pass.txt  thresh.cpp  video1.cpp
demo/: Edges.cpp  MaskRed.cpp
include/: App.h  CircularBuffer.h  CircularRoadSignDetector.h  Common.h  FrameProvider.h  IRoadSignDetector.h  ImageProcessing.h  NotificationPlayer.h  Ocr.h  ShapeRoadSignDetector.h  SignDrawer.h  common.h
include/models/: RoadSign.h  SpeedLimitSign.h
resources/video/labels/: speed_limit_0.csv  speed_limit_1.csv  speed_limit_10.csv  speed_limit_11.csv  speed_limit_2.csv  speed_limit_3.csv  speed_limit_4.csv  speed_limit_5.csv  speed_limit_6.csv  speed_limit_7.csv  speed_limit_8.csv  speed_limit_9.csv  speed_limit_night_12.csv  speed_limit_night_13.csv  speed_limit_night_14.csv  speed_limit_night_15.csv  speed_limit_night_16.csv  speed_limit_night_17.csv  speed_limit_night_18.csv  speed_limit_night_19.csv  speed_limit_night_20.csv  speed_limit_night_21.csv  speed_limit_night_22.csv  speed_limit_night_23.csv  speed_limit_night_24.csv  speed_limit_seqence_1.csv
src/: App.cpp  CMakeLists.txt  CircularRoadSignDetector.cpp  FrameProvider.cpp  IRoadSignDetector.h  ImageProcessing.cpp  Main.cpp  MyOcr.cpp  MyOcr.h  NotificationPlayer.cpp  Ocr.cpp  ShapeRoadSignDetector.cpp  SignDrawer.cpp  Util.cpp  test.cpp
src/models/: RoadSign.cpp  RoadSign.h
test/: test.cpp
tests/: NotificationPlayerTest.cpp  OcrTest.cpp  RoadSignDetectorTest.cpp  Tests.cpp  VideoSeqenceTests.cpp  VideoSequenceTests.cpp  VideoTest.cpp  tests.cpp
tests/include/utils/: VideoTestUtils.h  videoTestUtils.h
tests/utils/: VideoTestUtils.cpp  videoTestUtils.cpp
tools/: Desc.cpp  Edges.cpp  HsvColorPicker.cpp  MaskRed.cpp  MeanShift.cpp  Perspective.cpp  Threshold.cpp  VideoEditor.cpp
